youmu/static/sass/breakpoints/_regular.scss
.video-list-item {
    @include span-columns(3);
    &:nth-child(4n + 3) {   // First three are exceptions to the grid
        margin-right: 0;
    }
    position: relative;


    .video-title {
        font-size: 1.5em;
    }
}

.video-list {
    .first {
        @include span-columns(8);

        .video-title {
            font-size: ms(2);
        }
    }

    .second, .third {
        @include span-columns(4);
        margin-right: 0;

        .video-title {
            font-size: ms(1);
        }
    }
}

